--- a/package.json
+++ b/package.json
@@ -9,12 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^13.0.6",
     "@types/node": "18.11.12",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "@types/styled-components": "^5.1.26",
+    "@types/uuid": "^9.0.0",
+    "axios": "^1.2.1",
+    "formik": "^2.2.9",
     "next": "13.0.6",
+    "next-auth": "^4.18.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "react-use": "^17.4.0",
+    "styled-components": "^5.3.6",
+    "typescript": "4.9.4",
+    "uuid": "^9.0.0",
+    "yup": "^0.32.11"
   }
 }
